[package]
name = "actor_system_prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
indexmap = { version = "2.2.5", features = ["serde"] }
stringlit = "2.1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
